# tnote_plus

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tnote
.github/workflows/: python-package.yaml  python-testing.yaml
src/: tnote.py
tests/unit/: test_main.py
tests/unit/src/: test_main.py
tests/unit/tnote-plus/: test_main.py
tnote_plus/: tnote.py
