[tool.poetry]
name = "tnote_plus"
version = "0.0.1"
description = "simple CLI notetaking"
authors = ["Anthony Herrera <anthonyherrera24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
args = "^0.1.0"
clint = "^0.5.1"
peewee = "^3.14.10"
sqlcipher3 = "^0.4.5"
pycrypto = "^2.6.1"
getkey = "^0.6.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pudb = "^2022.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tnote = './src/tnote.py:main'
